# image-edit

./: README.md  pyproject.toml
src/image_edit/: __init__.py  cli.py  config.py  core.py
src/image_edit/providers/: __init__.py  base.py  gemini.py
src/image_edit/templates/: __init__.py  builtin.py  registry.py
src/image_edit/utils/: __init__.py  image.py  io.py
tests/: __init__.py  test_core.py  test_templates.py  test_utils.py
