[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-edit"
version = "0.1.0"
description = "AI-powered image editing CLI with Unix piping support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Martin Bil" }
]
keywords = ["image", "editing", "ai", "cli", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

dependencies = [
    "typer>=0.12.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "pillow>=10.0.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
image-edit = "image_edit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/image_edit"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
